# OpenRPG

./: .gitignore  .prettierrc  .travis.yml  .vimrc  CHANGELOG.md  CMakeLists.txt  CNAME  CTestTestfile.cmake  LICENSE  Makefile  README.md  _config.yml  binding.gyp  build.bat  build.js  build.sh  config.h.in  contributing.md  download.md  faq.md  index.htm  index.html  keybase.txt  openrpg  package-lock.json  package.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md
.github/workflows/: ccpp.yml
.well-known/: brave-rewards-verification.txt
Testing/Temporary/: CTestCostData.txt
_data/: nav.yml  team.yml
_includes/: cookie-consent.html  footer.html  header.html  nav-docs.html  page-headers.html  top-nav.html
_layouts/: default.html  docs.html  home.html
_plugin/: markdown-block.rb
about/: brand.md  history.md  license.md  privacy.md  team.md  translations.md
api/: Cargo.toml  Rocket.toml  die.md  introduction.md  namegenerator.md  source-setup.md
api/src/: main.rs
assets/names/dwarf/: male
assets/names/human/: last
css/: blog.css  style.css
data/: LICENSE  openrpg.json
data/character_sheets/: Blank ASCII Character Sheet.txt  Example ASCII Character Sheet.txt  ascii_char_sheet
data/names/: Adult Male Elf Names  Air Genasi Names  Dragonborn Clan Names  Dragonborn Female Names  Dragonborn Male Names  Earth Genasi Names  Elf Common Family Names (and translations)  Elf Female Adult  Female Gnome Names  Fire Genasi Names  Gnome Clan Names  Male Dwarf Names  Male Orc Names  Water Genasi Names  aarakocra.lst  changeling  shifter.lst  warforged  warforged.lst
data/names/dragonborn/: child.lst  female.lst  last.lst  male.lst
data/names/dwarf/: female  last.lst  male
data/names/elf/: child.lst  female.lst  last.lst  male.lst
data/names/gnome/: female.lst  last.lst  male.lst
data/names/goliath/: female.lst  last  male
data/names/half-orc/: female.lst
data/names/halfling/: female.lst  last  male
data/names/human/: female  last.lst  male  male.lst
data/names/kalashtar/: female.lst  last.lst  male.lst
data/names/kor/: female.lst  male.lst
data/names/minotaur/: female.lst  last.lst  male.lst
data/names/orc/: female.lst  male.lst
data/names/tiefling/: female.lst  last
data/names/tiefling:infernal_and_abyssal/: male
docs/: CNAME  _config.yml  blog.md  contributing.md  download.md  faq.md  index.htm  index.html  search.json
docs/_data/: nav.yml
docs/_includes/: footer.html  header.html  nav-docs.html  nav-home.html  page-headers.html  top-nav.html
docs/_layouts/: default.html  docs.html  home.html
docs/about/: brand.md  history.md  license.md  team.md  translations.md
docs/css/: style.css  yamm.css
docs/documentation/: character-generator.md  dice.md  download.md  introduction.md  name-generator.md  source-setup.md
docs/examples/: character-generator.md  dice.md  example.md  name-generator.md  overview.md  test.md
docs/src/: openrpgbook.css
documentation/: character-generator.md  dice.md  die.md  expression-parser.md  expression-tree.md  expressiontree.md  introduction.md  name-generator.md  namegenerator.md  source-setup.md
examples/: overview.md  roll.md
include/: character.h  die.h  names.h  openrpg.h  opt-parser.h  races.h  roll-parser.h  roll.h  utils.h  wrappers.h
include/character/: ability-scores.h  backgrounds.h  character.h  classes.h  races.h  skills.h
include/core/: config.h  core-wrapper.h  opt-parser.h  platform.h  types.h  unix.h  utils.h  win32.h  xml.h
include/core/platform/: osx.h  (+2 more)
include/names/: names-wrapper.h  names.h
include/roll/: die.h  roll-parser.h  roll-wrapper.h
js/: blog.js  github.js  openrpg.js
man/: openrpg.1
modules/: name-generator
src/: CMakeLists.txt  config.h  main.cpp  openrpg.cpp  utils.cpp
src/assets/banners/: welcome_mat1
src/assets/names/dwarf/: female
src/assets/names/human/calishite/: last
src/assets/names/human/chondathan/: female  last
src/assets/names/human/female/: damaran
src/assets/names/human/illuskan/: female  last
src/assets/names/human/male/: calishite  illuskan
src/assets/names/human/mulan/: female
src/assets/names/human/shou/: female  last
src/assets/names/human/truami/: female  last  male
src/character/: CMakeLists.txt  backgrounds.cpp  character-generator.cpp  character.cpp  classes.cpp  races.cpp
src/core/: CMakeLists.txt  core-wrapper.cpp  utils.cpp  xml.cpp
src/core/platform/: osx.cpp  unix.cpp  win32.cpp
src/lib/: CMakeLists.txt  config.h  utils.cpp  utils.h
src/lib/modules/: CMakeLists.txt  Makefile
src/lib/modules/character/: CMakeLists.txt  character-generator.cpp  character.cpp  character.h
src/lib/modules/generator/: CMakeLists.txt  Makefile  gen-main.cpp  generator.cpp  generator.h  main.cpp  name-generator.cpp
src/lib/modules/names/: CMakeLists.txt  generator.cpp  name-generator.cpp  names.cpp  names.h
src/lib/modules/roll/: CMakeLists.txt  die.cpp  die.h  main.cpp  roll-main.cpp  roll-parser.cpp  roll-parser.h  roll-parser.hpp  roll-parser.y  roll-scanner.cpp  roll-scanner.l  roll.cpp  roll.h
src/modules/: CMakeLists.txt
src/modules/generator/: CMakeLists.txt  generator.cpp  generator.h  main.cpp
src/modules/lib/: utils.h
src/names/: CMakeLists.txt  name-generator-wrapper.cpp  name-generator.cpp  names.cpp
src/nodejs/: CMakeLists.txt  export.js  export.ts  node-addon.cpp  nodeAddon.cpp  openrpg.d.ts
src/nodejs/roll/: rollWrapper.cpp  rollWrapper.h
src/roll/: CMakeLists.txt  roll-parser.cpp  roll-wrapper.cpp  roll.cpp  rollWrapper.cpp
src/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  generator-test.cpp  name-generator-test.cpp  roll-parser-test.cpp  roll-test.cpp
src/tests/assets/names/dwarf/: last
src/util/: utils.cpp  utils.h
test/: CMakeLists.txt  generator-test.cpp  name-generator-test.cpp  roll-parser-test.cpp  test.js
web-api/: die.md  introduction.md  namegenerator.md  source-setup.md
wrappers/: CMakeLists.txt  export.js
wrappers/roll/: rollAddon.cpp  rollWrapper.cpp
(+10 files in other folders)
